로그인에 validation 기능 추가

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "ejs": "3.1.5",
     "express": "4.17.1",
-    "express-validator": "6.7.0",
+    "express-validator": "^6.7.0",
     "mongoose": "5.11.1"
   },
   "devDependencies": {
