--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "mongoose": "5.11.1"
   },
   "devDependencies": {
+    "eslint": "^7.15.0",
+    "eslint-config-google": "^0.14.0",
     "nodemon": "1.18.4"
   },
   "keywords": []
