--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "3.1.5",
     "express": "4.17.1",
     "express-validator": "^6.7.0",
