--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "ejs": "3.1.5",
-    "express": "4.17.1",
+    "express": "^4.17.1",
     "express-validator": "^6.7.0",
     "mongoose": "5.11.1",
     "morgan": "^1.10.0"
